mcac-demo-hub/dashboards/demo/deploy/k8s/generated/02-vault.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: vault
spec:
  replicas: 1
  selector:
    matchLabels:
        app.kubernetes.io/name: vault
        app.kubernetes.io/part-of: demo-hub
        demo-hub.io/group: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
        app.kubernetes.io/part-of: demo-hub
        demo-hub.io/group: vault
    spec:
      serviceAccountName: vault
      containers:
        - name: vault
          image: hashicorp/vault:1.15.6
          imagePullPolicy: IfNotPresent
          args:
            - server
            - -dev
            - -dev-listen-address=0.0.0.0:8200
            - -dev-root-token-id=demo-hub-dev-root
          ports:
            - name: http
              containerPort: 8200
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          readinessProbe:
            httpGet:
              path: /v1/sys/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /v1/sys/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
---

apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: vault
spec:
  type: ClusterIP
  selector:
        app.kubernetes.io/name: vault
        app.kubernetes.io/part-of: demo-hub
        demo-hub.io/group: vault
  ports:
    - name: http
      port: 8200
      targetPort: http
