mcac-demo-hub/dashboards/demo/deploy/k8s/generated/64-demo-tools.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-tools
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: demo-tools
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-tools
        app.kubernetes.io/part-of: demo-hub
        demo-hub.io/group: toolbox
    spec:
      containers:
        - name: demo-tools
          image: demo-hub/demo-tools:latest
          imagePullPolicy: Never
          command:
            - "sleep"
            - "infinity"
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 2222
              name: tools
---

apiVersion: v1
kind: Service
metadata:
  name: demo-tools
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: demo-tools
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: toolbox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-tools
  ports:
    - port: 2222
      targetPort: 2222
      name: tools
