mcac-demo-hub/dashboards/demo/deploy/k8s/generated/70-kafka-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: kafka-connect
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka-connect
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafka-connect
        app.kubernetes.io/part-of: demo-hub
        demo-hub.io/group: kafka-connect
    spec:
      containers:
        - name: kafka-connect
          image: mcac-demo/kafka-connect:2.7.3-mongo-sink
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "8Gi"
              cpu: "2"
          ports:
            - containerPort: 8083
              name: http
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: kafka-connect
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: kafka-connect
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kafka-connect
  ports:
    - port: 8083
      targetPort: 8083
      name: http
