mcac-demo-hub/dashboards/demo/deploy/k8s/generated/95-hub-demo-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-demo-ui
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: hub-demo-ui
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: hub-demo-ui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hub-demo-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hub-demo-ui
        app.kubernetes.io/part-of: demo-hub
        demo-hub.io/group: hub-demo-ui
    spec:
      containers:
        - name: hub-demo-ui
          image: mcac-demo/hub-demo-ui:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "1536Mi"
              cpu: "2"
          ports:
            - containerPort: 8888
              name: http
---

apiVersion: v1
kind: Service
metadata:
  name: hub-demo-ui
  namespace: demo-hub
  labels:
    app.kubernetes.io/name: hub-demo-ui
    app.kubernetes.io/part-of: demo-hub
    demo-hub.io/group: hub-demo-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hub-demo-ui
  ports:
    - port: 8888
      targetPort: 8888
      name: http
